force/src/objects/QProject__c.object
<CustomObject>
    <description>Projects that request the creation or maintenance of knowledge Articles</description>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Division</fullName>
                    <default>true</default>
                    <label>Division</label>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QProject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>QProject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QProjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>